examples/type_system/failing/49_top_level_effect_with_existing_main.flx
// E413: effectful top-level code is rejected even when main exists.

print("top-level")

fn main() with IO {
    print("inside-main")
}
